# UPS-Monitor

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
referencias/: README.md
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: AppErrorBoundary.tsx  BatteryGauge.tsx  CurveView.tsx  Dashboard.tsx  DetailsView.tsx  HistoryView.tsx  MetricCard.tsx  SettingsView.tsx  Sidebar.tsx  StatusGrid.tsx  TestView.tsx  ViewErrorBoundary.tsx  VoltageChart.tsx  index.ts
src/desktop/: tauriDesktopBridge.ts
src/styles/: global.css
src/types/: desktop.ts  settings.ts  ups.ts
tests/: settings-view.test.tsx  test-view.test.tsx
