[package]
name = "ups_monitor_pro"
version = "1.0.0"
description = "UPS Monitor - Tauri Migration"
authors = ["UPS Monitor"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ups_monitor_pro_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
hidapi = "2.6"
tauri = { version = "2.10.0", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
rodio = "0.20.1"

[target.'cfg(target_os = "windows")'.dependencies]
window-vibrancy = "0.6"
